@@ -18,15 +18,15 @@
 package org.photonvision.common.dataflow.websocket;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.photonvision.PhotonVersion;
+import org.photonvision.common.LoadJNI;
+import org.photonvision.common.LoadJNI.JNITypes;
 import org.photonvision.common.configuration.NeuralNetworkModelManager;
 import org.photonvision.common.configuration.PhotonConfiguration;
+import org.photonvision.common.dataflow.networktables.NetworkTablesManager;
 import org.photonvision.common.hardware.Platform;
 import org.photonvision.common.networking.NetworkManager;
 import org.photonvision.common.networking.NetworkUtils;
-import org.photonvision.mrcal.MrCalJNILoader;
-import org.photonvision.raspi.LibCameraJNILoader;
 import org.photonvision.vision.processes.VisionModule;
 import org.photonvision.vision.processes.VisionSourceManager;
 
@@ -53,17 +53,19 @@ public class UIPhotonConfiguration {
                         new UIGeneralSettings(
                                 PhotonVersion.versionString,
                                 // TODO add support for other types of GPU accel
-                                LibCameraJNILoader.isSupported() ? "Zerocopy Libcamera Working" : "",
-                                MrCalJNILoader.getInstance().isLoaded(),
-                                NeuralNetworkModelManager.getInstance().getModels(),
+                                LoadJNI.hasLoaded(JNITypes.LIBCAMERA) ? "Zerocopy Libcamera Working" : "",
+                                LoadJNI.hasLoaded(JNITypes.MRCAL),
+                                c.neuralNetworkPropertyManager().getModels(),
                                 NeuralNetworkModelManager.getInstance().getSupportedBackends(),
                                 c.getHardwareConfig().deviceName.isEmpty()
                                         ? Platform.getHardwareModel()
                                         : c.getHardwareConfig().deviceName,
-                                Platform.getPlatformName()),
+                                Platform.getPlatformName(),
+                                NetworkTablesManager.getInstance().conflictingHostname,
+                                NetworkTablesManager.getInstance().conflictingCameras),
                         c.getApriltagFieldLayout()),
                 VisionSourceManager.getInstance().getVisionModules().stream()
                         .map(VisionModule::toUICameraConfig)
-                        .collect(Collectors.toList()));
+                        .toList());
     }
 }
